fix navbar in mobile size

--- a/platform-builder.html
+++ b/platform-builder.html
@@ -23,14 +23,20 @@
           <div class="line-menu half end"></div>
         </div>
         <div class="mobile-nav">
-          <a href="/#home" class="page-scroll">Home</a>
-          <a href="/#about" class="page-scroll">About</a>
-          <a href="/#projects" class="page-scroll">Projects</a>
-          <span id="service-link">Service</span>
-          <a href="website-builder.html" id="website-link" class="d-none">Website Builder</a>
-          <a href="platform-builder.html" id="platform-link" class="d-none">Platform Builder</a>
-          <a href="/#contact" class="page-scroll">Contact</a>
-          <a href="/#subscribe" class="page-scroll">Subscribe</a>
+          <ul class="ps-0">
+            <li><a href="/#home" class="page-scroll">Home</a></li>
+            <li><a href="/#about" class="page-scroll">About</a></li>
+            <li><a href="/#projects" class="page-scroll">Projects</a></li>
+            <li>
+              Service
+              <ul class="ps-0">
+                <li><a href="website-builder.html" id="website-link">Website Builder</a></li>
+                <li><a href="platform-builder.html" id="platform-link">Platform Builder</a></li>
+              </ul>
+            </li>
+            <li><a href="/#contact" class="page-scroll">Contact</a></li>
+            <li><a href="/#subcribe" class="page-scroll">Subscribe</a></li>
+          </ul>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
@@ -82,9 +88,11 @@
             Builder kami
           </p>
 
-          <button class="btn-buat-sekarang bg-transparent text-light py-2 px-3" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000">
-            Buat Sekarang
-          </button>
+          <div data-aos="fade-right" data-aos-duration="2000" data-aos-delay="2000">
+            <a href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website" target="_blank" class="btn-buat-sekarang">
+              Buat Sekarang
+            </a>
+          </div>
         </div>
       </div>
     </div>
@@ -104,36 +112,37 @@
               Mulai Bangun bisnis Restoran anda, dapatkan kemudahan dalam
               reservasi produk makanan anda.
             </p>
-          </div>
-          <div class="row">
-            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
-              <h5 class="fw-bold mb-3">Pemesanan Online</h5>
-              <p>
-                Terima pesanan & terima pembayaran online anda . Biarkan
-                pelanggan anda memesan dan melakukan pengambilan produk anda
-                dengan mudah cepat.
-              </p>
-            </div>
-            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="400">
-              <h5 class="fw-bold mb-3">Manajemen Reservasi</h5>
-              <p>
-                Dapatkan Kemudahan dalam reservasi online & Kirim konfirmasi
-                otomatis kepada pelanggan
-              </p>
-            </div>
-            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
-              <h5 class="fw-bold mb-3">Custom Menu</h5>
-              <p>
-                Buat dan kelola menu online untuk restoran anda dan jangkau
-                lebih banyak pembeli.
-              </p>
-            </div>
-            <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
-              <h5 class="fw-bold mb-3">Pembayaran Online yang Aman</h5>
-              <p>
-                Biarkan pelanggan membayar dengan kartu kredit, dompet
-                digital, atau uang tunai
-              </p>
+
+            <div class="row">
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
+                <h5 class="fw-bold mb-3">Pemesanan Online</h5>
+                <p>
+                  Terima pesanan & terima pembayaran online anda . Biarkan
+                  pelanggan anda memesan dan melakukan pengambilan produk anda
+                  dengan mudah cepat.
+                </p>
+              </div>
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="400">
+                <h5 class="fw-bold mb-3">Manajemen Reservasi</h5>
+                <p>
+                  Dapatkan Kemudahan dalam reservasi online & Kirim konfirmasi
+                  otomatis kepada pelanggan
+                </p>
+              </div>
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
+                <h5 class="fw-bold mb-3">Custom Menu</h5>
+                <p>
+                  Buat dan kelola menu online untuk restoran anda dan jangkau
+                  lebih banyak pembeli.
+                </p>
+              </div>
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
+                <h5 class="fw-bold mb-3">Pembayaran Online yang Aman</h5>
+                <p>
+                  Biarkan pelanggan membayar dengan kartu kredit, dompet
+                  digital, atau uang tunai
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -151,7 +160,7 @@
         </div>
         <div class="col-md-6">
           <div class="section-two-title h-100 d-flex flex-column justify-content-center" data-aos="fade-left" data-aos-duration="2000">
-            <h2 class="fw-bold text-black" >Kelola Reservasi Hotel</h2>
+            <h2 class="fw-bold text-black">Kelola Reservasi Hotel</h2>
             <p class="mb-4">
               Ayo Bangun Bisnis Hotel impian Anda, Dapatkan kemudahan dalam
               reservasi hotel anda. Nikmati berbagai macam fitur untuk
@@ -191,7 +200,7 @@
     <div class="container d-flex">
       <div class="row gy-4">
         <div class="col-md-6">
-          <div class="section-one-title d-flex flex-column"  data-aos="fade-right" data-aos-duration="2000" >
+          <div class="section-one-title d-flex flex-column" data-aos="fade-right" data-aos-duration="2000">
             <h2 class="fw-bold text-black">
               Buat Situs Toko Online dengan Mudah
             </h2>
@@ -200,21 +209,21 @@
               fitur-fitur menarik yang kami sediakan.
             </p>
             <div class="row">
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="300">
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="300">
                 <h5 class="fw-bold mb-3">Pembayaran Online yang Aman</h5>
                 <p>
                   Terima pembayaran online yang aman & kelola semua transaksi
                   dari dasbor Wix Anda.
                 </p>
               </div>
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="400">
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="400">
                 <h5 class="fw-bold mb-3">Paket & Pembayaran Berulang</h5>
                 <p>
                   Tawarkan berbagai paket harga, mulai jual langganan &
                   kumpulkan pembayaran berulang.
                 </p>
               </div>
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="500">
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
                 <h5 class="fw-bold mb-3">Produk Tak Terbatas</h5>
                 <p>
                   Tampilkan produk & koleksi Anda tanpa batas dan berikan opsi
@@ -222,7 +231,7 @@
                   mudah.
                 </p>
               </div>
-              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000"  data-aos-delay="600">
+              <div class="col-md-6" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
                 <h5 class="fw-bold mb-3">Jual di Marketplaces</h5>
                 <p>
                   Jangkau lebih banyak pembeli & jual di marketplace manapun.
@@ -232,7 +241,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="./assets/img/S1.jpg" alt="burger_edited" class="section-one-img img-fluid" data-aos="fade-left" data-aos-duration="2000"/>
+          <img src="./assets/img/S1.jpg" alt="burger_edited" class="section-one-img img-fluid" data-aos="fade-left" data-aos-duration="2000" />
         </div>
       </div>
     </div>
@@ -503,7 +512,7 @@
         </p>
         <p class="fw-light text-center m-0">
           <a href="#" class="text-decoration-none">Proudly created</a>
-          with <img src="./img/love.svg" alt="love" class="img-footer" /> by
+          with <img src="./assets/img/love.svg" alt="love" class="img-footer" /> by
           <a href="https://www.nineod.com/" class="text-decoration-none">nineod</a>
         </p>
         <div class="media-social-icon d-flex justify-content-end">
@@ -515,7 +524,8 @@
       </div>
     </div>
   </footer>
-  <script src="./assets/js/jquery.js"></script>
+  <script src="./assets/js/jquery/jquery.js"></script>
+  <script src="./assets/js/jquery/jquery.breakpoints.min.js"></script>
   <script src="./assets/js/custom.js"></script>
   <script src="./assets/js/aos/aos.js"></script>
   <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
