--- a/services.html
+++ b/services.html
@@ -23,18 +23,24 @@
                     <div class="line-menu half end"></div>
                 </div>
                 <div class="mobile-nav">
-                    <a href="/#home" class="page-scroll">Home</a>
-                    <a href="/#about" class="page-scroll">About</a>
-                    <a href="/#projects" class="page-scroll">Projects</a>
-                    <span id="service-link">Service</span>
-                    <a href="website-builder.html" id="website-link" class="d-none">Website Builder</a>
-                    <a href="platform-builder.html" id="platform-link" class="d-none">Platform Builder</a>
-                    <a href="/#contact" class="page-scroll">Contact</a>
-                    <a href="/#subscribe" class="page-scroll">Subscribe</a>
+                    <ul class="ps-0">
+                        <li><a href="/#home" class="page-scroll">Home</a></li>
+                        <li><a href="/#about" class="page-scroll">About</a></li>
+                        <li><a href="/#projects" class="page-scroll">Projects</a></li>
+                        <li>
+                            Service
+                            <ul class="ps-0">
+                                <li><a href="website-builder.html" id="website-link">Website Builder</a></li>
+                                <li><a href="platform-builder.html" id="platform-link">Platform Builder</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/#contact" class="page-scroll">Contact</a></li>
+                        <li><a href="/#subcribe" class="page-scroll">Subscribe</a></li>
+                    </ul>
                 </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav nav-navbar" data-aos="fade-down" data-aos-duration="2000" data-aos-delay="2000">
-                        <li class="nav-item item-nav">
+                        <li class="nav-item mt-4 pt-2 px-2 item-nav">
                             <a class="nav-link link-nav" aria-current="page" href="/#home">Home</a>
                         </li>
                         <li class="nav-item mx-2 mt-4 pt-2 px-2 item-nav fw-normal">
@@ -50,8 +56,8 @@
                                     <li class="nav-item w-100 item-nav text-center">
                                         <a class="nav-link link-nav ps-1" href="website-builder.html">Website Builder</a>
                                     </li>
-                                    <li class="nav-item w-100 item-nav text-center active">
-                                        <a class="nav-link link-nav ps-1 active" href="platform-builder.html">Platform Builder</a>
+                                    <li class="nav-item w-100 item-nav text-center">
+                                        <a class="nav-link link-nav ps-1" href="platform-builder.html">Platform Builder</a>
                                     </li>
                                 </ul>
                             </div>
@@ -86,9 +92,11 @@
                     <p class="mb-4 fs-5 fw-light" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
                         Dan tingkatkan kepercayaan pelanggan anda dengan miliki website bisnis mu sendiri
                     </p>
-                    <button class="btn-buat-sekarang bg-transparent text-light py-2 px-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
-                        Buat Sekarang
-                    </button>
+                    <div data-aos="fade-up" data-aos-duration="2000" data-aos-delay="2000">
+                        <a href="https://api.whatsapp.com/send?phone=+628112108020&text=Hello,%20i%20want%20to%20ask%20about%20website" target="_blank" class="btn-buat-sekarang">
+                            Buat Sekarang
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -185,7 +193,7 @@
             <div class="section-services-fifth-body d-flex flex-column justify-content-center align-items-center text-center">
                 <h4 class="fw-bold text-black" data-aos="fade-up" data-aos-duration="2000">Website Personal</h4>
                 <p class="w-50" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="100">Dapatkan Best Price potongan sebesar Rp.2.000.000 dengan berlangganan selama 2 tahun.</p>
-                <div class="background-gray px-2 py-3 w-100 row mb-5">
+                <div class="service-image-wrap background-gray px-2 py-3 w-100 row mb-5">
                     <div class="col-md-6 mb-3">
                         <img src="./assets/img/NineodFreight.png" alt="nineod-freight" class="img-fluid img-services">
                     </div>
@@ -195,7 +203,7 @@
                 </div>
                 <h4 class="fw-bold text-black" data-aos="fade-up" data-aos-duration="2000">Website Platform</h4>
                 <p class="w-50" data-aos="fade-up" data-aos-duration="2000">Dapatkan kode refferal dan potongan harga. Dengan mereferensikan paket yang anda pilih ke teman atau kolega anda.</p>
-                <div class="background-gray p-2 w-100 row mb-5">
+                <div class="service-image-wrap background-gray p-2 w-100 row mb-5">
                     <div class="col-md-6 mb-3">
                         <img src="./assets/img/burger_edited.jpg" alt="nineod-freight" class="img-fluid img-services">
                     </div>
@@ -240,9 +248,9 @@
             </div>
         </div>
     </footer>
-    <script src="./assets/js/jquery.js"></script>
+    <script src="./assets/js/jquery/jquery.js"></script>
+    <script src="./assets/js/jquery/jquery.breakpoints.min.js"></script>
     <script src="./assets/js/aos/aos.js"></script>
-    <script src="./assets/js/jquery/jquery.lazyload.min.js"></script>
     <script src="./assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="./assets/js/aos/customAos.js"></script>
     <script src="./assets/js/custom.js"></script>
