adding link target in section team

--- a/index.html
+++ b/index.html
@@ -208,12 +208,11 @@
           </p>
         </div>
         <div class="col-md-6">
-          <div class="input-group mb-1" data-aos="fade-left" data-aos-duration="1500">
-            <input type="text" class="form-control input-subscribe" placeholder="Enter your email here*" aria-label="Recipient's username" aria-describedby="basic-addon2" />
-            <div></div>
-            <span class="input-group-text button-subscribe" id="basic-addon2">Join</span>
-          </div>
-          <p>Thanks for subscribe!</p>
+          <form action="" class="input-group mb-1" data-aos="fade-left" data-aos-duration="1500">
+            <input type="email" name="email" class="form-control input-subscribe px-3" required placeholder="Enter your email here*" aria-label="Recipient's username" aria-describedby="basic-addon2" />
+            <button class="input-group-text button-subscribe" id="basic-addon2" type="submit">Join</button>
+          </form>
+          <p class="message-subscribe d-none">Thanks for subscribe!</p>
         </div>
       </div>
     </div>
@@ -305,18 +304,18 @@
         <div class="col-md-4 col-6 project-wrap">
           <div class="position-relative ">
             <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
-              <p class="m-0 txt-primary text-uppercase">Virtual Spirit</p>
-              <p>Agency Web Apps</p>
+              <p class="m-0 txt-primary text-uppercase">fabrication net</p>
+              <p>Web Apps</p>
             </div>
             <div class="projects-image position-relative">
-              <img src="./assets/img/OPENBUILD.jpg" alt="loop-find-image" class="img-fluid position-relative" />
+              <img src="./assets/img/FABRICATION-NET_edited.jpg" alt="loop-find-image" class="img-fluid position-relative" />
             </div>
           </div>
         </div>
         <div class="col-md-4 col-6 project-wrap">
           <div class="position-relative ">
             <div class="projects-item position-absolute d-flex flex-column justify-content-center align-items-center bg-white">
-              <p class="m-0 txt-primary text-uppercase">Fabrication net</p>
+              <p class="m-0 txt-primary text-uppercase">Eduparc</p>
               <p>Web Apps</p>
             </div>
             <div class="projects-image position-relative">
@@ -383,7 +382,7 @@
         </div>
       </div>
       <div class="w-100 text-center">
-        <a href="#" class="text-decoration-underline showMore" id="showMore">Show More</a>
+        <button class="text-decoration-underline bg-transparent border-0 fw-bold show-more" id="showMore">Show More</button>
       </div>
     </div>
   </section>
@@ -456,8 +455,8 @@
         <img src="./assets/img/Pa_Elvin.png" alt="pa-elvin-img" class="img-fluid img-team mb-3" />
         <i class="fw-semibold fs-5">Elvin Alvian</i>
         <div class="d-inline mb-3">
-          <a href=""><img src="./assets/img/upwork-1_edited.png" alt="upwork" class="icon me-1" /></a>
-          <a href=""><img src="./assets/img/linkedin_edited_edited_edited.png" alt="upwork" class="icon" /></a>
+          <a href="https://www.upwork.com/freelancers/~0156c4edbc7b84b60c/" target="_blank"><img src="./assets/img/upwork-1_edited.png" alt="upwork" class="icon me-1" /></a>
+          <a href="https://www.linkedin.com/in/3lviend/" target="_blank"><img src="./assets/img/linkedin_edited_edited_edited.png" alt="upwork" class="icon" /></a>
         </div>
         <p class="fw-light">
           FullStack Ruby on Rails Developer with Responsive Design experience
