update button hover

--- a/services.html
+++ b/services.html
@@ -213,7 +213,9 @@
                 </div>
                 <h4 class="fw-bold text-black" data-aos="fade-up" data-aos-duration="2000">Pilihan Kategori Platform</h4>
                 <p class="w-50" data-aos="fade-up" data-aos-duration="2000">Dengan memilih paket Mandala atau Trikora, Anda dapat memilih 1 kategori platform.</p>
-                <button class="btn-selengkapnya py-2 px-3 mb-3" data-aos="fade-up" data-aos-duration="2000" data-aos-delay="100">Selengkapnya</button>
+                <div data-aos="fade-up" data-aos-duration="2000" data-aos-delay="100">
+                    <a href="#" class="btn-selengkapnya py-2 px-3 mb-3">Selengkapnya</a>
+                </div>
             </div>
             <p class="fst-italic">*syarat dan ketententuan berlaku</p>
         </div>
@@ -225,7 +227,7 @@
                 <p class="m-0">Konsultasikan kebutuhan web aplikasi yang Anda</p>
                 <p class="mb-4">butuhkan dengan kami secara online</p>
             </div>
-            <button class="btn-make-schedule">Buat Jadwal</button>
+            <a href="#" class="btn-make-schedule">Buat Jadwal</a>
         </div>
     </section>
     <footer>
