--- a/website-builder.html
+++ b/website-builder.html
@@ -164,7 +164,7 @@
         <p class="m-0">Punya Pertanyaan Seputar Website?</p>
         <p class="mb-4">Buat Jadwal Diskusi Sekarang!</p>
       </div>
-      <button class="btn-make-schedule">Buat Jadwal</button>
+      <a href="#" class="btn-make-schedule">Buat Jadwal</a>
     </div>
   </section>
   <section class="ask-questions py-5">
