--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         </div>
       </div>
       <div class="w-100 text-center">
-        <button class="text-decoration-underline bg-transparent border-0 fw-bold show-more" id="showMore">Show More</button>
+        <button class="text-decoration-underline bg-transparent border-0 show-more" id="showMore">Show More</button>
       </div>
     </div>
   </section>
@@ -471,21 +471,21 @@
           <i class="fas fa-phone"></i>
           <div class="d-inline w-100">
             <h5 class="fw-bold mb-0">Phone</h5>
-            <p class="m-0">+62 811-2108-020</p>
+            <a href="tel:+62%20811-2108-020" class="m-0">+62 811-2108-020</a>
           </div>
         </div>
         <div class="card-contact d-flex background-secondary" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="500">
           <i class="far fa-envelope"></i>
           <div class="d-inline w-100">
             <h5 class="fw-bold mb-0">Email</h5>
-            <p class="m-0">admin@nineod.com</p>
+            <a href="mailto:admin@nineod.com" class="m-0">admin@nineod.com</a>
           </div>
         </div>
         <div class="card-contact d-flex background-secondary" data-aos="fade-right" data-aos-duration="2000" data-aos-delay="600">
           <i class="fa fa-map-marker-alt"></i>
           <div class="d-inline w-100">
             <h5 class="fw-bold mb-0">Address</h5>
-            <p class="m-0">Jl. Sentra Raya No. 11</p>
+            <a href="https://goo.gl/maps/PYH4nFhexuqaSpYR9" target="_blank" class="m-0">Jl. Sentra Raya No. 11</a>
           </div>
         </div>
       </div>
@@ -521,10 +521,10 @@
       </div>
     </div>
     <div class="media-social-icon d-flex justify-content-start">
-      <a href="" class="text-secondary"><i class="fab fa-facebook-f me-4 fs-5"></i></a>
-      <a href="" class="text-secondary"><i class="fab fa-twitter me-4 fs-5"></i></a>
-      <a href="" class="text-secondary"><i class="fab fa-youtube me-4 fs-5" aria-hidden="true"></i></a>
-      <a href="" class="text-secondary"><i class="fab fa-instagram fs-5"></i></a>
+      <a href="https://www.facebook.com/nineod/" target="_blank" class="text-secondary"><i class="fab fa-facebook-f me-4 fs-5"></i></a>
+      <a href="https://twitter.com/nine_od" target="_blank" class="text-secondary"><i class="fab fa-twitter me-4 fs-5"></i></a>
+      <a href="https://www.youtube.com/channel/UC5i3z--8T9DPZR7JcGye94w" target="_blank" class="text-secondary"><i class="fab fa-youtube me-4 fs-5" aria-hidden="true"></i></a>
+      <a href="https://www.instagram.com/nineodev/" target="_blank" class="text-secondary"><i class="fab fa-instagram fs-5"></i></a>
     </div>
   </section>
   <footer>
@@ -540,10 +540,10 @@
           <a href="https://www.nineod.com/" class="text-decoration-none">nineod</a>
         </p>
         <div class="media-social-icon d-flex justify-content-end">
-          <a href="" class="text-secondary"><i class="fab fa-facebook-f fs-5"></i></a>
-          <a href="" class="text-secondary"><i class="fab fa-twitter fs-5"></i></a>
-          <a href="" class="text-secondary"><i class="fab fa-instagram fs-5"></i></a>
-          <a href="" class="text-secondary"><i class="fab fa-linkedin-in fs-5"></i></a>
+          <a href="https://www.facebook.com/nineod/" target="_blank" class="text-secondary"><i class="fab fa-facebook-f fs-6"></i></a>
+          <a href="https://twitter.com/nineodofficial" target="_blank" class="text-secondary"><i class="fab fa-twitter fs-6"></i></a>
+          <a href="https://www.youtube.com/channel/UC5i3z--8T9DPZR7JcGye94w" target="_blank" class="text-secondary"><i class="fab fa-youtube fs-6"></i></a>
+          <a href="https://www.instagram.com/nineodofficial/" target="_blank" class="text-secondary"><i class="fab fa-instagram fs-6"></i></a>
         </div>
       </div>
     </div>
