update dropdown link in mobile-nav

--- a/platform-builder.html
+++ b/platform-builder.html
@@ -28,7 +28,7 @@
             <li><a href="/#about" class="page-scroll">About</a></li>
             <li><a href="/#projects" class="page-scroll">Projects</a></li>
             <li>
-              Service
+              <span class="position-relative">Service <i class="fas fa-chevron-down arrow-dropdown fs-6"></i></span> 
               <ul class="ps-0">
                 <li><a href="website-builder.html" id="website-link">Website Builder</a></li>
                 <li><a href="platform-builder.html" id="platform-link">Platform Builder</a></li>
